http-egress/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-bootstrap-egress-config
  namespace: default
data:
  envoy.yaml: |
    # Author: MageEdu <mage@magedu.com>
    # Site: www.magedu.com
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address: { address: 127.0.0.1, port_value: 80 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: web_service_1
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route: { cluster: web_cluster }
              http_filters:
              - name: envoy.filters.http.router

      clusters:
      - name: web_cluster
        connect_timeout: 0.25s
        type: STATIC
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: web_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 10.100.1.193, port_value: 80 }
            - endpoint:
                address:
                  socket_address: { address: 10.100.2.23, port_value: 80 }
